# udf-data-structures-1

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  flake.nix
lib/linked-list/: CMakeLists.txt
lib/linked-list/include/: linked_list.h
lib/linked-list/src/: linked_list.c
lib/product-array/: CMakeLists.txt
lib/product-array/include/: product_array.h
lib/product-array/src/: product_array.c
nix/: files.nix  formatter.nix  package.nix  shell.nix  workflows.nix
nix/modules/: dendritic.nix  files.nix  lib.nix  nixpkgs.nix  treefmt.nix
